// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contractHandler > should handle error during EVM call 1`] = `
[
  {
    "_tag": "InvalidRequestError",
    "message": "Contract at address 0x3333333333333333333333333333333333333333 does not exist",
    "name": "InvalidRequestError",
  },
]
`;

exports[`contractHandler > should handle error during transaction creation 1`] = `
[
  {
    "_tag": "UnexpectedError",
    "message": "Error adding transaction to pool",
    "name": "UnexpectedError",
  },
]
`;

exports[`contractHandler > should handle errors returned during contract call 1`] = `
[
  [RevertError: revert

Docs: https://tevm.sh/reference/tevm/errors/classes/reverterror/
Details: {"error":"revert","errorType":"EvmError"}
Version: 1.1.0.next-73],
]
`;

exports[`contractHandler > should handle invalid function encoding 1`] = `
[
  [InvalidRequest: Function "nonExistentFunction" not found on ABI.
Make sure you are using the correct ABI and that the function exists on it.

Docs: https://viem.sh/docs/contract/encodeFunctionData
Version: viem@2.23.10

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidrequesterror/
Details: Function "nonExistentFunction" not found on ABI.
Make sure you are using the correct ABI and that the function exists on it.

Docs: https://viem.sh/docs/contract/encodeFunctionData
Version: viem@2.23.10
Version: 1.1.0.next-73],
]
`;

exports[`contractHandler > should handle invalid params 1`] = `
[
  [InvalidToError: Address must be 40 hex characters long (with 0x prefix)

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidtoerror/
Version: 1.1.0.next-73],
  [InvalidParams: Address must be 40 hex characters long (with 0x prefix)

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidtoerror/
Version: 1.1.0.next-73

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidparamserror/
Version: 1.1.0.next-73],
  [InvalidParams: Address must be 40 hex characters long (with 0x prefix)

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidparamserror/
Version: 1.1.0.next-73],
]
`;

exports[`contractHandler > should handle missing contract 1`] = `
[
  {
    "_tag": "InvalidRequestError",
    "message": "Contract at address 0x0000000000000000000000000000000000000000 does not exist",
    "name": "InvalidRequestError",
  },
]
`;

exports[`contractHandler > should handle revert errors during contract call 1`] = `
[
  [RevertError: revert

Docs: https://tevm.sh/reference/tevm/errors/classes/reverterror/
Details: {"error":"revert","errorType":"EvmError"}
Version: 1.1.0.next-73],
]
`;

exports[`contractHandler > should handle unexpected errors during param conversion 1`] = `
[
  [InvalidGasPrice: gas must be a non-negative bigint

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidgaspriceerror/
Version: 1.1.0.next-73],
  [InvalidParams: gas must be a non-negative bigint

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidgaspriceerror/
Version: 1.1.0.next-73

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidparamserror/
Version: 1.1.0.next-73],
  [InvalidBytecodeError: Must have either code, to, or deployedBytecode

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidbytecodeerror/
Version: 1.1.0.next-73],
]
`;

exports[`contractHandler > should handle unexpected errors during script creation 1`] = `
[
  [InvalidAbiError: Missing required field: abi

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidabierror/
Version: 1.1.0.next-73],
  [InvalidFunctionNameError: Missing required field: functionName

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidfunctionnameerror/
Version: 1.1.0.next-73],
]
`;

exports[`contractHandler should handle error during EVM call 1`] = `
[
  {
    "_tag": "InvalidRequestError",
    "message": "Contract at address 0x3333333333333333333333333333333333333333 does not exist",
    "name": "InvalidRequestError",
  },
]
`;

exports[`contractHandler should handle error during transaction creation 1`] = `
[
  {
    "_tag": "UnexpectedError",
    "message": "Error adding transaction to pool",
    "name": "UnexpectedError",
  },
]
`;

exports[`contractHandler should handle errors returned during contract call 1`] = `
[
  [_RevertError: revert

Docs: https://tevm.sh/reference/tevm/errors/classes/reverterror/
Details: {"error":"revert","errorType":"EvmError"}
Version: 1.1.0.next-73],
]
`;

exports[`contractHandler should handle invalid function encoding 1`] = `
[
  [InvalidRequestError: Function "nonExistentFunction" not found on ABI.
Make sure you are using the correct ABI and that the function exists on it.

Docs: https://viem.sh/docs/contract/encodeFunctionData
Version: viem@2.23.10

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidrequesterror/
Details: Function "nonExistentFunction" not found on ABI.
Make sure you are using the correct ABI and that the function exists on it.

Docs: https://viem.sh/docs/contract/encodeFunctionData
Version: viem@2.23.10
Version: 1.1.0.next-73],
]
`;

exports[`contractHandler should handle invalid params 1`] = `
[
  [InvalidToError: Address must be 40 hex characters long (with 0x prefix)

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidtoerror/
Version: 1.1.0.next-73],
  [_InvalidParamsError: Address must be 40 hex characters long (with 0x prefix)

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidtoerror/
Version: 1.1.0.next-73

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidparamserror/
Version: 1.1.0.next-73],
  [_InvalidParamsError: Address must be 40 hex characters long (with 0x prefix)

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidparamserror/
Version: 1.1.0.next-73],
]
`;

exports[`contractHandler should handle missing contract 1`] = `
[
  {
    "_tag": "InvalidRequestError",
    "message": "Contract at address 0x0000000000000000000000000000000000000000 does not exist",
    "name": "InvalidRequestError",
  },
]
`;

exports[`contractHandler should handle revert errors during contract call 1`] = `
[
  [_RevertError: revert

Docs: https://tevm.sh/reference/tevm/errors/classes/reverterror/
Details: {"error":"revert","errorType":"EvmError"}
Version: 1.1.0.next-73],
]
`;

exports[`contractHandler should handle unexpected errors during param conversion 1`] = `
[
  [InvalidGasPriceError: gas must be a non-negative bigint

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidgaspriceerror/
Version: 1.1.0.next-73],
  [_InvalidParamsError: gas must be a non-negative bigint

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidgaspriceerror/
Version: 1.1.0.next-73

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidparamserror/
Version: 1.1.0.next-73],
]
`;

exports[`contractHandler should handle unexpected errors during script creation 1`] = `
[
  [InvalidRequestError: undefined is not an object (evaluating 'parameters.abi.length')

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidrequesterror/
Details: undefined is not an object (evaluating 'parameters.abi.length')
Version: 1.1.0.next-73],
]
`;
